--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -4,6 +4,13 @@
 {% block title %}{{link}}{% endblock %}
 {% block body %}
 <style>
+
+    .row
+    {
+        margin: 0px;  !important;
+        padding: 0px;  !important;
+
+    }
     .btn
     {
     width: 100%;
@@ -35,13 +42,13 @@
         vertical-align: middle;
     }
 </style>
-<div class="container">
-    <div class="row">
+<div class="container" style="padding: 0px; margin: 0px">
+    <div class="row" style="padding: 0px; margin: 0px">
         <div class="col s1 m1 l3"></div>
         <div class="col s10 m10 l6">
             <ul class="collection hoverable "  style="border: 1px solid #607d8b" id="list">
                 <li class="collection-item avatar">
-                    <div class="row">
+                    <div class="row"  style="padding: 0px; margin: 0px">
                         <!-- user avatar -->
                         <img class="responsive-img circle"  height = "40px" width="40px" src="{{link.user.profile.pic}}" />
                         &nbsp; &nbsp;
@@ -58,7 +65,7 @@
                                         </a>
                                     </div>
                                     <div class="col s12 m12 l5 right-align" id="icons_extra">
-                                        <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" title="Show URL" data-activates="dropdown11" id="show_url_button"><i class="material-icons">remove_red_eye</i></a>
+                                        <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue hide-on-med-and-down" href="#" title="Show URL" data-activates="dropdown11" id="show_url_button"><i class="material-icons">remove_red_eye</i></a>
                                         <a class="btn-floating btn-small  waves-effect waves-light blue" href="{{ link.url }}" title="Visit Link" target="_blank"><i class="material-icons">open_in_new</i></a>
                                         <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" title="Share" data-beloworigin="true" data-activates="dropdown10"><i class="material-icons">share</i></a>
                                         <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" id="copy" title="Copy to clipboard" ><i class="material-icons">content_copy</i></a>
@@ -145,8 +152,8 @@
                     </p>
                 </li>
                 {% if request.user.is_authenticated %}
-                <li class="collection-item avatar">
-                    <div class="row">
+                <li class="collection-item avatar" style="padding: 0px; margin: 0px">
+                    <div class="row" style="padding: 0px; margin: 0px">
                         <div class="col s12 m12 l4">
                             <span> <sup id="upvotes_count">{{ upvotes }}</sup><sup> upvote(s)</sup></span>
                             <button class="btn green upvote upvote_upper_button waves-effect waves-light {{upvote_button}} center" id="upvote_button" link_id = "{{ link.id }}"> <i class="material-icons" style="color: white; background-color: transparent">thumb_up</i> </button>
@@ -170,7 +177,7 @@
                     <p class="green-text"><span id="num_comments2">{{link.comment_set.count}}</span> comment(s) on this link:</p>
                     <ul class="collection" id="comments_div_p">
                         {% for comment in link.comment_set.all %}
-                    <li class="collection-item avatar commentsListItems valign-wrapper">
+                    <li class="collection-item avatar commentsListItems valign-wrapper" style="padding: 0px; margin: 0px">
                     <img src="{{ comment.user.profile.pic }}" class="responsive-img circle">
                         <div class = "comments_inside_div">
 
@@ -186,7 +193,7 @@
                             {{ comment_form.as_p }}
                         </div>
                     </form>
-                    <div class="row">
+                    <div class="row" style="padding: 0px; margin: 0px">
                         <div class="col s12 m12 l4">
                             <button class="btn blue waves-effect waves-light" id="commentSubmitButton">Comment</button>
                         </div>
