--- a/linkbook/core/templates/core/profile.html
+++ b/linkbook/core/templates/core/profile.html
@@ -86,8 +86,8 @@
                       <div class="container">
                           <div class="row">
                                 <div class="col s12 l6 m12">
-                                    <button class="btn btn-flat blue darken-1" id="follower_count">{{ follower_count }} follower(s)</button>
-                                    <button class="btn btn-flat blue darken-1" id = "following_count">following {{ following_count }}</button>
+                                    <button class="btn btn-flat blue darken-1" id="follower_count">follower(s):{{ follower_count }} </button>
+                                    <button class="btn btn-flat blue darken-1" id = "following_count">following : {{ following_count }}</button>
                                 </div>
                                 <div class="col s12 l6 m12">
                                      <a href="/{{ user.username }}?show=links" target="_blank" class="btn btn-flat green">{{ link_count }} link(s)</a>
