--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -44,8 +44,8 @@
 </style>
 <div class="container" style="padding: 0px; margin: 0px">
     <div class="row" style="padding: 0px; margin: 0px">
-        <div class="col s1 m1 l3"></div>
-        <div class="col s10 m10 l6">
+        <div class="col s12 m1 l3"></div>
+        <div class="col s12 m10 l6">
             <ul class="collection hoverable "  style="border: 1px solid #607d8b" id="list">
                 <li class="collection-item avatar">
                     <div class="row"  style="padding: 0px; margin: 0px">
@@ -60,16 +60,21 @@
                             <i class="material-icons circle blue-grey">description</i>
                             <div>
                                 <div class="row" style="margin-bottom: 0px">
-                                    <div class="col s12 m12 l7">
+                                    <div class="col s12 m12 l6">
                                         <a href = "{{link.url}}" target="_blank" class="title">
                                             <h5>{{link.title | linebreaksbr}}</h5>
                                         </a>
                                     </div>
-                                    <div class="col s12 m12 l5 right-align" id="icons_extra">
+                                    <div class="col s12 m12 l6 right-align" id="icons_extra">
                                         <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue hide-on-med-and-down" href="#" title="Show URL" data-activates="dropdown11" id="show_url_button"><i class="material-icons">remove_red_eye</i></a>
                                         <a class="btn-floating btn-small  waves-effect waves-light blue" href="{{ link.url }}" title="Visit Link" target="_blank"><i class="material-icons">open_in_new</i></a>
                                         <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" title="Share" data-beloworigin="true" data-activates="dropdown10"><i class="material-icons">share</i></a>
                                         <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" id="copy" title="Copy to clipboard" ><i class="material-icons">content_copy</i></a>
+                                        {% if request.user == link.user %}
+
+                                            <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="/link/{{ link.id }}/edit" id="edit" title="Edit Link" ><i class="material-icons">edit</i></a>
+
+                                        {% endif %}
                                     </div>
                                 </div>
                                 <div id="modal10" class="modal">
@@ -204,7 +209,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col s1 m1 l3"></div>
+        <div class="col s12 m1 l3"></div>
     </div>
 </div>
 <!--  Sharing dropdown -->
