--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -1,4 +1,3 @@
-
 {% load staticfiles i18n %}
 {% load notifications_tags %}
 <!DOCTYPE html>
@@ -33,6 +32,19 @@
             <div class="nav-wrapper">
                 <a href="#" class="center brand-logo" >LinkBook</a>
                 <a href="#" data-activates="mobile-demo"  class="button-collapse" ><i class="material-icons">menu</i></a>
+
+
+            {% if request.user.is_authenticated %}
+
+                <ul class="hide-on-med-and-down right">
+                    <li><a href="/logout/?next={{request.path}}">Logout</a></li>
+                </ul>
+                <ul class="right">
+              <li><a class='dropdown-button btn-floating waves-effect waves-light green' data-beloworigin="true" href='#!' data-activates='NOTIFS' id="MYNOTIF" data-constrainwidth="false" height = "50px"><i id = "NOTIF_ICON" class="material-icons">notifications</i></a></li>
+
+            </ul>
+            {% endif %}
+
                 <ul class="hide-on-med-and-down left">
                     <li class="active left"><a href="/">Home</a></li>
                     <li>
@@ -51,8 +63,8 @@
                     <li><a class="btn-floating  waves-effect waves-light green" href="#modal2" title="Create new book" ><i class="material-icons">queue</i></a></li>
                     <li><a class="btn-floating waves-effect waves-light green" href="#modal3" title="Create new link" ><i class="material-icons">note_add</i></a>
                     </li>
-                    <li><a class='dropdown-button btn-floating waves-effect waves-light green' data-beloworigin="true" href='#!' data-activates='NOTIFS' id="MYNOTIF" data-constrainwidth="false" height = "50px"><i id = "NOTIF_ICON" class="material-icons">notifications</i></a></li>
-                    <li><a href="/logout/?next={{request.path}}">Logout</a></li>
+                  <!--  <li><a class='dropdown-button btn-floating waves-effect waves-light green' data-beloworigin="true" href='#!' data-activates='NOTIFS' id="MYNOTIF" data-constrainwidth="false" height = "50px"><i id = "NOTIF_ICON" class="material-icons">notifications</i></a></li> -->
+
                     {% endif %}
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
@@ -73,14 +85,30 @@
                     </li>
                     <li><a href="#modal3" title="Create new link" ><i class="material-icons">note_add</i>Create new  link</a>
                     </li>
-                    <li><a class='dropdown-button' data-beloworigin="true" href='#!' data-activates='NOTIFS' id="MYNOTIF" data-constrainwidth="false"><i id = "NOTIF_ICON" class="material-icons">notifications</i>Notifications</a></li>
+
                     <li><a href="/logout/?next={{request.path}}">Logout</a></li>
                     {% endif %}
                 </ul>
+
             </div>
         </nav>
         <!-- Dropdown Structure -->
-        <ul id='NOTIFS' class='dropdown-content'></ul>
+        <ul id='NOTIFS' class='dropdown-content' style="max-width: 90%; min-width: 50%">
+
+        </ul>
+        <!-- Notifications Modal -->
+            <div id="modal5" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <div class="container">
+                        <ul class="collection" id="mobile-notifications">
+
+                        </ul>
+                    </div>
+                </div>
+                <div class="modal-footer">
+
+                </div>
+            </div>
         <!-- LOGIN modal -->
         <div id="modal1" class="modal">
             <div class="modal-content">
@@ -151,7 +179,8 @@
         <!-- NEW BOOK modal -->
         <div id="modal2" class="modal">
             <div class="modal-content">
-                <h4 class="center">Create your own book</h4>
+                <h4 class="center">New Book</h4>
+
                 <form method="post" action="{% url 'create_book' %}" role="form">
                     {% csrf_token %}
                     <div class="input-field">
@@ -174,7 +203,7 @@
         <!-- NEW LINK MODAL -->
         <div id="modal3" class="modal">
             <div class="modal-content">
-                <h4 class="center">Create your link</h4>
+                <h4 class="center">New Link</h4>
                 <form method="post" action="{% url 'create_link' %}" role="form">
                     {% csrf_token %}
                     <div class="row">
@@ -227,6 +256,12 @@
         {% block body %}
         {% endblock body %}
         <script>
+
+        function ResetForm()
+        {
+            $(this).closest('form').find("input[type=text], textarea, input[type=password] select, input[type=url]").val("")
+        }
+
             // CSRF handling
             function getCookie(name) {
               var cookieValue = null;
@@ -294,24 +329,24 @@
             
 
                             str = '';
-                            for( i = 0; i < data['notifs'].length;i++){
+                            for( i = 0; i < data['notifs'].length;i++)
+                            {
                                 if (data['notifs'][i]['unread']){
                                         //give shading here
-                                        str += "<li>";
+                                        str += '<li class=" notifications_unread collection-item">';
                                     }
                                     else{
-                                        str += "<li>";
+                                        str += '<li class="collection-item">';
                                     }
             
-                                    str += ("<a href=" + data['notifs'][i]['url'] + ">"
-                                            + "<img src=" + data['notifs'][i]['pic'] + " height=20px width=20px/>&nbsp"
-                                            + data['notifs'][i]['text'] + "</a></li>"
-                                            + "<li class='divider'></li>");
-                                }
+                                    str += ("<a style='max-width : 100%; padding : 1px; margin : 1px'  href=" + data['notifs'][i]['url'] + ">"
+                                            + "<img src=" + data['notifs'][i]['pic'] + " height=20px width=20px/> <span class='notifications_normal'>"
+                                            + data['notifs'][i]['text'] + "</span></a></li>");
+                            }
             
                                 if(str === '')
                                 {
-                                    str = '<li>No notifications</li>'
+                                    str = '<li>No notifications</li>';
                                     notif_master.removeClass('pulse');
                                     notif_master.removeClass('blue');
                                     notif_master.addClass('green');
